// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 1;
  max-height: 80lvh;
  object-fit: contain;
}

<img
    alt="An image description"
    class="emotion-0 emotion-1"
    loading="lazy"
    sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
    srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
    title="An image title"
  />
</DocumentFragment>
`;

exports[`Image should render Square 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 1;
  max-height: 80lvh;
  object-fit: contain;
}

<img
    alt="An image description"
    class="emotion-0 emotion-1"
    loading="lazy"
    sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
    srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
    title="An image title"
  />
</DocumentFragment>
`;

exports[`Image should render WithoutDescription 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 1;
  max-height: 80lvh;
  object-fit: contain;
}

<img
    alt="An image title"
    class="emotion-0 emotion-1"
    loading="lazy"
    sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
    srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
    title="An image title"
  />
</DocumentFragment>
`;

exports[`Image should render WithoutTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 1;
  max-height: 80lvh;
  object-fit: contain;
}

<img
    alt="An image description"
    class="emotion-0 emotion-1"
    loading="lazy"
    sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
    srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
    title=""
  />
</DocumentFragment>
`;
